--- a/css/styles.css
+++ b/css/styles.css
@@ -24,7 +24,7 @@ p {
 
   .hero-img {
     width: auto;
-    height: 157px;
+    height: 147px;
     display: block;
     border-radius: 20px 20px 0 0;
     max-width: 375px;
@@ -53,7 +53,7 @@ p {
 
   .text-div {
     max-width: 375px;
-    width: 320px;
+    width: 300px;
     background-color: hsl(225, 100%, 98%);
     display: flex;
     align-items: center;
@@ -151,7 +151,7 @@ p {
 }
 
 
-@media (min-width: 375px) {
+@media (min-width: 375px) and (max-width: 1440px) {
   body {
     height: 95vh;
     background-image: url("../images/pattern-background-desktop.svg");
