--- a/css/styles.css
+++ b/css/styles.css
@@ -15,6 +15,7 @@ p {
 
   main {
     max-width: 375px;
+    margin: 0 10px 0 10px;
     display: flex;
     align-self: center;
     align-items: center;
