--- a/css/styles.css
+++ b/css/styles.css
@@ -152,10 +152,12 @@ p {
 }
 
 
-@media (min-width: 375px) and (max-width: 1440px) {
+@media (min-width: 375px) {
   body {
     height: 95vh;
     background-image: url("../images/pattern-background-desktop.svg");
+    background-repeat: no-repeat; 
+    background-color: hsl(225, 100%, 94%);
     display: flex;
     align-self: center;
     justify-content: center;
